[package]
name = "honker"
version = "0.1.0"
edition = "2024"
description = "SQLite-native task runtime: durable queues, streams, pub/sub, and scheduler. Ergonomic Rust wrapper over honker-core."
license = "Apache-2.0"
repository = "https://github.com/russellromney/honker"
homepage = "https://honker.dev"
readme = "README.md"

# Not part of the root workspace — lives on its own so it can be
# split into a submodule repo without disturbing the core build.
[workspace]

[dependencies]
honker-core = { path = "../../honker-core" }
rusqlite = { version = "0.39", features = ["functions"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
